# SongRequestBot

./: .gitignore  Cargo.toml  README.md  config.toml.example  main.rb
config/: application.yml.example  foobar.yml.example  summer.yml.example  webplayer.yml.example
lib/: commandlistener.rb
plugins/: foobar_upnp_control.rb  webplayer.rb
queue_manager_client/: Gemfile  queue_client.rb
queue_manager_client/lib/: queue_pb.rb  queue_services_pb.rb
queue_manager_server/: .byebug_history  Gemfile  queue_server.rb
queue_manager_server/proto/: queue.proto
src/: main.rs
