[package]
name = "SongRequestBot"
version = "0.1.0"
authors = ["Ntacman <Ntacman@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.13.6"
ureq = { version = "0.11.4", features = ["json", "charset"] }
lazy_static = "1.4.0"
state = { version = "0.4.1", features = ["const_fn"] }
